# UltRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
img/: cornell-box-without-direct-light-sampling.tga  cornell-box-without-importance-sampling.tga  cornell-box.tga
include/bakers/: PreBakedAmbientOcclusion.h
include/data/: BoundingInfo.h  Color.h  GeometricPrimitives.h  Image.h  IntersectionInfo.h  Matrix.h  Ray.h  TriangleMesh.h
include/hierarchy/: IntersectableNode.h  Node.h  TransformNode.h
include/math/: BVH.h  Geometry.h  Matrix.h  Ray.h  Transform.h
include/postprocessors/: EmptyPostprocessor.h  IPostprocessor.h  ScreenSpaceAmbientOcclusion.h
include/rendering/: BSDF.h  Camera.h  Constants.h  Helper.cpp  Helper.h  ICamera.h  ICameraNode.h  Light.h  Material.h  Pipeline.h  Rasterization.h  Rasterize.h  Rasterizing.h  Scene.h  Shader.cpp  Shader.h
include/rendering/light/: DirectionalLight.h  IAreaLight.h  INonAreaLight.h  PlaneLight.h  PointLight.h
include/rendering/material/: BSDFMaterial.h  CommonMaterial.h  DisneyBRDFMaterial.h  GlowBSDFMaterial.h  LambertianBRDFMaterial.h  OrenNayarBRDFMaterial.h  PhongBRDFMaterial.h
include/rendering/rasterizing/: Camera.h  Helper.h  Pipeline.h  Rasterizing.h
include/rendering/rasterizing/bakers/: PreBakedAmbientOcclusion.h
include/rendering/rasterizing/shaders/: BlinnPhongReflectionMeshShader.h  DepthMeshShader.h  DepthPeelingMeshShader.h  FlatMeshShader.h  GouraudMeshShader.h  IMeshShader.h  IShader.h  NormalMappingMeshShader.h  PhongMeshShader.h  PreBakedAmbientOcclusionMeshShader.h
include/rendering/raytracing/: BackwardsPathtracingShader.h  Camera.h  IRayShader.h  Raytracing.h  WhittedStyleRaytracing.h  WhittedStyleRaytracingShader.h
include/rendering/raytracing/shaders/: BackwardsPathtracingShader.h  IRayShader.h  WhittedStyleRaytracingShader.h
include/shaders/: BlinnPhongReflectionMeshShader.h  DepthMeshShader.h  DepthPeelingMeshShader.h  FlatMeshShader.h  FlatShader.h  GouraudMeshShader.h  GouraudShader.h  IMeshShader.h  IShader.h  NormalMappingMeshShader.h  PhongMeshShader.h  PhongShader.h  PreBakedAmbientOcclusionMeshShader.h
include/utils/: Algorithm.h  Color.h  Geometry.h  Hash.h  Proxy.h  Random.h  String.h
src/: Main.cpp  main.cpp
src/bakers/: PreBakedAmbientOcclusion.cpp
src/data/: BoundingInfo.cpp  Color.cpp  GeometricPrimitives.cpp  Image.cpp  IntersectionInfo.cpp  Matrix.cpp  Ray.cpp  TriangleMesh.cpp
src/examples/: CreateCornellBox.cpp
src/hierarchy/: IntersectableNode.cpp  Node.cpp  TransformNode.cpp
src/math/: BVH.cpp  Geometry.cpp  Matrix.cpp  Ray.cpp  Transform.cpp
src/postprocessors/: EmptyPostprocessor.cpp  IPostprocessor.cpp  ScreenSpaceAmbientOcclusion.cpp
src/rasterization/: Rasterization.cpp
src/rendering/: BSDF.cpp  Camera.cpp  Constants.cpp  Helper.cpp  ICamera.cpp  ICameraNode.cpp  Light.cpp  Material.cpp  Pipeline.cpp  Rasterize.cpp  Rasterizing.cpp  Raytracing.cpp  Scene.cpp  Shader.cpp
src/rendering/light/: DirectionalLight.cpp  IAreaLight.cpp  INonAreaLight.cpp  PlaneLight.cpp  PointLight.cpp
src/rendering/material/: BSDFMaterial.cpp  CommonMaterial.cpp  DisneyBRDFMaterial.cpp  GlowBSDFMaterial.cpp  LambertianBRDFMaterial.cpp  OrenNayarBRDFMaterial.cpp  PhongBRDFMaterial.cpp
src/rendering/rasterizing/: Camera.cpp  Helper.cpp  Pipeline.cpp  Rasterizing.cpp
src/rendering/rasterizing/bakers/: PreBakedAmbientOcclusion.cpp
src/rendering/rasterizing/shaders/: BlinnPhongReflectionMeshShader.cpp  DepthMeshShader.cpp  DepthPeelingMeshShader.cpp  FlatMeshShader.cpp  GouraudMeshShader.cpp  IMeshShader.cpp  IShader.cpp  NormalMappingMeshShader.cpp  PhongMeshShader.cpp  PreBakedAmbientOcclusionMeshShader.cpp
src/rendering/raytracing/: BackwardsPathtracingShader.cpp  Camera.cpp  IRayShader.cpp  Raytracing.cpp  WhittedStyleRaytracing.cpp  WhittedStyleRaytracingShader.cpp
src/rendering/raytracing/shaders/: BackwardsPathtracingShader.cpp  IRayShader.cpp  WhittedStyleRaytracingShader.cpp
src/shaders/: BlinnPhongReflectionMeshShader.cpp  DepthMeshShader.cpp  DepthPeelingMeshShader.cpp  FlatMeshShader.cpp  FlatShader.cpp  GouraudMeshShader.cpp  GouraudShader.cpp  IMeshShader.cpp  IShader.cpp  NormalMappingMeshShader.cpp  PhongMeshShader.cpp  PhongShader.cpp  PreBakedAmbientOcclusionMeshShader.cpp
src/utils/: Algorithm.cpp  Color.cpp  Geometry.cpp  Hash.cpp  Proxy.cpp  Random.cpp  String.cpp
