cmake_minimum_required(VERSION 3.26)
project(UltRenderer)

set(CMAKE_CXX_STANDARD 20)

add_executable(UltRenderer src/Main.cpp
        src/data/Image.cpp
        include/data/Image.h
        src/data/Image.cpp
        include/data/Image.h
        include/data/Image.h
        src/data/Image.cpp
        src/rendering/rasterizing/Rasterizing.cpp
        include/rendering/rasterizing/Rasterizing.h
        src/data/TriangleMesh.cpp
        include/data/TriangleMesh.h
        src/math/Matrix.cpp
        include/math/Matrix.h
        include/utils/String.h
        src/utils/String.cpp
        src/utils/Hash.cpp
        include/utils/Hash.h
        src/math/Geometry.cpp
        include/math/Geometry.h
        src/rendering/rasterizing/Camera.cpp
        include/rendering/rasterizing/Camera.h
        src/rendering/Scene.cpp
        include/rendering/Scene.h
        src/math/Transform.cpp
        include/math/Transform.h
        src/utils/Proxy.cpp
        include/utils/Proxy.h
        src/hierarchy/Node.cpp
        include/hierarchy/Node.h
        src/rendering/Light.cpp
        include/rendering/Light.h
        src/hierarchy/TransformNode.cpp
        include/hierarchy/TransformNode.h
        src/rendering/rasterizing/shaders/IShader.cpp
        include/rendering/rasterizing/shaders/IShader.h
        src/rendering/rasterizing/Pipeline.cpp
        include/rendering/rasterizing/Pipeline.h
        src/rendering/rasterizing/shaders/FlatMeshShader.cpp
        include/rendering/rasterizing/shaders/FlatMeshShader.h
        src/rendering/rasterizing/shaders/GouraudMeshShader.cpp
        include/rendering/rasterizing/shaders/GouraudMeshShader.h
        src/rendering/rasterizing/shaders/PhongMeshShader.cpp
        include/rendering/rasterizing/shaders/PhongMeshShader.h
        src/rendering/rasterizing/shaders/IMeshShader.cpp
        include/rendering/rasterizing/shaders/IMeshShader.h
        src/rendering/rasterizing/shaders/NormalMappingMeshShader.cpp
        include/rendering/rasterizing/shaders/NormalMappingMeshShader.h
        src/rendering/rasterizing/shaders/BlinnPhongReflectionMeshShader.cpp
        include/rendering/rasterizing/shaders/BlinnPhongReflectionMeshShader.h
        include/rendering/rasterizing/shaders/DepthMeshShader.h
        src/rendering/rasterizing/shaders/DepthMeshShader.cpp
        src/postprocessors/IPostprocessor.cpp
        include/postprocessors/IPostprocessor.h
        src/postprocessors/ScreenSpaceAmbientOcclusion.cpp
        include/postprocessors/ScreenSpaceAmbientOcclusion.h
        src/postprocessors/EmptyPostprocessor.cpp
        include/postprocessors/EmptyPostprocessor.h
        src/rendering/rasterizing/bakers/PreBakedAmbientOcclusion.cpp
        include/rendering/rasterizing/bakers/PreBakedAmbientOcclusion.h
        src/rendering/rasterizing/shaders/PreBakedAmbientOcclusionMeshShader.cpp
        include/rendering/rasterizing/shaders/PreBakedAmbientOcclusionMeshShader.h
        src/rendering/rasterizing/Helper.cpp
        include/rendering/rasterizing/Helper.h
        src/rendering/rasterizing/shaders/DepthPeelingMeshShader.cpp
        include/rendering/rasterizing/shaders/DepthPeelingMeshShader.h
        src/data/BoundingInfo.cpp
        include/data/BoundingInfo.h
        include/rendering/raytracing/WhittedStyleRaytracingShader.h
        src/rendering/raytracing/WhittedStyleRaytracingShader.cpp
        src/math/Ray.cpp
        include/math/Ray.h
        src/data/IntersectionInfo.cpp
        include/data/IntersectionInfo.h
        src/rendering/raytracing/Camera.cpp
        include/rendering/raytracing/Camera.h
        src/rendering/ICamera.cpp
        include/rendering/ICamera.h
        src/math/BVH.cpp
        include/math/BVH.h
        src/utils/Algorithm.cpp
        include/utils/Algorithm.h
        src/rendering/Material.cpp
        include/rendering/Material.h
        src/rendering/Constants.cpp
        include/rendering/Constants.h
        src/data/Color.cpp
        include/data/Color.h
        src/rendering/raytracing/BackwardsPathtracingShader.cpp
        include/rendering/raytracing/BackwardsPathtracingShader.h
        src/rendering/raytracing/IRayShader.cpp
        include/rendering/raytracing/IRayShader.h)

include_directories(${PROJECT_SOURCE_DIR}/include)