cmake_minimum_required(VERSION 3.26)
project(UltRenderer)

set(CMAKE_CXX_STANDARD 20)

add_executable(UltRenderer src/Main.cpp
        src/data/Image.cpp
        include/data/Image.h
        src/data/Image.cpp
        include/data/Image.h
        include/data/Image.h
        src/data/Image.cpp
        src/rendering/rasterizing/Rasterizing.cpp
        include/rendering/rasterizing/Rasterizing.h
        src/data/TriangleMesh.cpp
        include/data/TriangleMesh.h
        src/math/Matrix.cpp
        include/math/Matrix.h
        include/utils/String.h
        src/utils/String.cpp
        src/utils/Hash.cpp
        include/utils/Hash.h
        src/math/Geometry.cpp
        include/math/Geometry.h
        src/rendering/rasterizing/Camera.cpp
        include/rendering/rasterizing/Camera.h
        src/rendering/Scene.cpp
        include/rendering/Scene.h
        src/math/Transform.cpp
        include/math/Transform.h
        src/utils/Proxy.cpp
        include/utils/Proxy.h
        src/hierarchy/Node.cpp
        include/hierarchy/Node.h
        src/hierarchy/TransformNode.cpp
        include/hierarchy/TransformNode.h
        src/rendering/rasterizing/shaders/IShader.cpp
        include/rendering/rasterizing/shaders/IShader.h
        src/rendering/rasterizing/Pipeline.cpp
        include/rendering/rasterizing/Pipeline.h
        src/rendering/rasterizing/shaders/FlatMeshShader.cpp
        include/rendering/rasterizing/shaders/FlatMeshShader.h
        src/rendering/rasterizing/shaders/GouraudMeshShader.cpp
        include/rendering/rasterizing/shaders/GouraudMeshShader.h
        src/rendering/rasterizing/shaders/PhongMeshShader.cpp
        include/rendering/rasterizing/shaders/PhongMeshShader.h
        src/rendering/rasterizing/shaders/IMeshShader.cpp
        include/rendering/rasterizing/shaders/IMeshShader.h
        src/rendering/rasterizing/shaders/NormalMappingMeshShader.cpp
        include/rendering/rasterizing/shaders/NormalMappingMeshShader.h
        src/rendering/rasterizing/shaders/BlinnPhongReflectionMeshShader.cpp
        include/rendering/rasterizing/shaders/BlinnPhongReflectionMeshShader.h
        include/rendering/rasterizing/shaders/DepthMeshShader.h
        src/rendering/rasterizing/shaders/DepthMeshShader.cpp
        src/postprocessors/IPostprocessor.cpp
        include/postprocessors/IPostprocessor.h
        src/postprocessors/ScreenSpaceAmbientOcclusion.cpp
        include/postprocessors/ScreenSpaceAmbientOcclusion.h
        src/postprocessors/EmptyPostprocessor.cpp
        include/postprocessors/EmptyPostprocessor.h
        src/rendering/rasterizing/bakers/PreBakedAmbientOcclusion.cpp
        include/rendering/rasterizing/bakers/PreBakedAmbientOcclusion.h
        src/rendering/rasterizing/shaders/PreBakedAmbientOcclusionMeshShader.cpp
        include/rendering/rasterizing/shaders/PreBakedAmbientOcclusionMeshShader.h
        src/rendering/rasterizing/Helper.cpp
        include/rendering/rasterizing/Helper.h
        src/rendering/rasterizing/shaders/DepthPeelingMeshShader.cpp
        include/rendering/rasterizing/shaders/DepthPeelingMeshShader.h
        src/data/BoundingInfo.cpp
        include/data/BoundingInfo.h
        include/rendering/raytracing/shaders/WhittedStyleRaytracingShader.h
        src/rendering/raytracing/shaders/WhittedStyleRaytracingShader.cpp
        src/data/Ray.cpp
        include/data/Ray.h
        src/data/IntersectionInfo.cpp
        include/data/IntersectionInfo.h
        src/rendering/raytracing/Camera.cpp
        include/rendering/raytracing/Camera.h
        src/rendering/ICamera.cpp
        include/rendering/ICamera.h
        src/math/BVH.cpp
        include/math/BVH.h
        src/utils/Algorithm.cpp
        include/utils/Algorithm.h
        src/rendering/material/CommonMaterial.cpp
        include/rendering/material/CommonMaterial.h
        src/rendering/Constants.cpp
        include/rendering/Constants.h
        src/data/Color.cpp
        include/data/Color.h
        src/rendering/raytracing/shaders/BackwardsPathtracingShader.cpp
        include/rendering/raytracing/shaders/BackwardsPathtracingShader.h
        src/rendering/raytracing/shaders/IRayShader.cpp
        include/rendering/raytracing/shaders/IRayShader.h
        src/utils/Random.cpp
        include/utils/Random.h
        src/rendering/BSDF.cpp
        include/rendering/BSDF.h
        src/hierarchy/IntersectableNode.cpp
        include/hierarchy/IntersectableNode.h
        src/data/GeometricPrimitives.cpp
        include/data/GeometricPrimitives.h
        src/rendering/material/LambertianBRDFMaterial.cpp
        include/rendering/material/LambertianBRDFMaterial.h
        src/rendering/material/PhongBRDFMaterial.cpp
        include/rendering/material/PhongBRDFMaterial.h
        src/rendering/material/OrenNayarBRDFMaterial.cpp
        include/rendering/material/OrenNayarBRDFMaterial.h
        src/rendering/material/DisneyBRDFMaterial.cpp
        include/rendering/material/DisneyBRDFMaterial.h
        src/examples/CreateCornellBox.cpp
        src/rendering/material/BSDFMaterial.cpp
        include/rendering/material/BSDFMaterial.h
        src/rendering/light/INonAreaLight.cpp
        include/rendering/light/INonAreaLight.h
        src/rendering/light/DirectionalLight.cpp
        include/rendering/light/DirectionalLight.h
        src/rendering/light/PointLight.cpp
        include/rendering/light/PointLight.h
        src/rendering/light/IAreaLight.cpp
        include/rendering/light/IAreaLight.h
        src/rendering/light/PlaneLight.cpp
        include/rendering/light/PlaneLight.h
        src/rendering/material/GlowBSDFMaterial.cpp
        include/rendering/material/GlowBSDFMaterial.h
)

include_directories(${PROJECT_SOURCE_DIR}/include)